Added a brace missing after rebase merge conflict. Test List methods adhering to Java 19