@@ -87,13 +87,13 @@ public class JsonHandlerTest {
         final int taskCount = 3;
         assertEquals(taskCount, subtaskList.size());
         // test first subtask in the test data
-        SubTask subTask = subtaskList.getFirst();
+        SubTask subTask = subtaskList.get(0);
         assertEquals("testidemo1.java", subTask.getFileName().get(0));
         assertEquals("view/demo1/path", subTask.getPath());
         assertEquals("t1", subTask.getIdeTaskId());
         assertNull(subTask.getTaskDirectory());
         // test last subtask in the test data
-        subTask = subtaskList.getLast();
+        subTask = subtaskList.get(subtaskList.size()-1);
         assertEquals("testidemo4.java", subTask.getFileName().get(0));
         assertEquals("view/demo1/anotherpath", subTask.getPath());
         assertEquals("t4", subTask.getIdeTaskId());
